[package]
name = "lens-standalone"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/trckpxl/lens-standalone"
description = "Rust client for Google Lens OCR"
rust-version = "1.90.0"

[dependencies]
anyhow = "1.0"
bytes = "1"
env_logger = "0.11"
image = "0.25"
log = "0.4"
prost = "0.14"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "http2"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
url = "2.4"
arboard = "3"
